# cv-generator

./: .gitignore  README.md  cv.json  pyproject.toml  requirements.txt
.github/workflows/: lint-and-test.yml  python-app.yml
.trunk/: trunk.yaml
examples/: cv.example.json
src/: main.py
src/converters/: __init__.py
src/converters/prometheus/: __init__.py  prometheus.py  utils.py
src/converters/prometheus/templates/: main.tex  title.tex
src/converters/prometheus/templates/prometheus/: main.tex  prometheus_cv.cls
src/schema/: cv.schema.json
src/sections/: cv.py  education.py  experience.py  project.py  skill.py  user.py
src/tests/converters/: prometheus_test.py
src/tests/sections/: cv_test.py
src/tests/utils/: cli_test.py  json_test.py  latex_test.py
src/utils/: cli.py  converters.py  json.py  latex.py  path.py
