[tool.poetry]
name = "cv-generator"
version = "0.1.0"
description = "A utility to easily generate CV from a json description"
authors = ["David Kragbé <42718923+dxvxd5@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
